# beebtools

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  FEATURES.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
basic/: .gitignore  CMakeLists.txt  Makefile  bbcbasic.5  bbcbasic_to_text.1  bbcbasic_to_text.c  decoder.c  decoder.h  invariant_token_map_test.sh  lines.c  run_golden_tests.sh  tokens.c  tokens.h  tokens_test.c
basic/testdata/: golden-token-map.txt
basic/testdata/golden/6502/: PICTURE_listo1.txt  PICTURE_listo3.txt  PICTURE_listo6.txt
basic/testdata/golden/ARM/: arm-c8-exit.bbc_listo7.txt
basic/testdata/golden/Mac/: More-mac-kw_listo0.txt  mac-hello-10000.bbc_listo0.txt  mac-hello-32784.bbc_listo0.txt  mac-hello-61456.bbc_listo0.txt  mac-otherwise_listo0.txt
basic/testdata/golden/PDP11/: PICTURE_listo0.txt  pdp11quit_listo0.txt
basic/testdata/golden/SDL/: PICTURE_listo0.txt
basic/testdata/golden/Windows/: example2.bbc_listo7.txt
basic/testdata/golden/Z80/: trailing-junk.bbc_listo7.txt
basic/testdata/inputs/6502/: PICTURE  mode7codes
basic/testdata/inputs/ARM/: arm-c8-exit.bbc
basic/testdata/inputs/Mac/: More-mac-kw  mac-hello-10000.bbc  mac-hello-32784.bbc  mac-hello-61456.bbc  mac-otherwise
basic/testdata/inputs/PDP11/: pdp11quit
basic/testdata/inputs/SDL/: PICTURE
basic/testdata/inputs/Windows/: example2.bbc
basic/testdata/inputs/Z80/: trailing-junk.bbc
basic/testdata/invalid/6502/: goto-premature-eol.bbc  incorrect-line-start.bbc  premature-eof-4.bbc  premature-eof-6.bbc  premature-eof-7.bbc  premature-eof-8.bbc  premature-eof-9.bbc  short-line-2.bbc
basic/testdata/invalid/ARM/: bad-c6-ext-map.bbc  premature-eol-after-c7.bbc
basic/testdata/invalid/SDL/: end.missing-eof.bbc
basic/testdata/invalid/Z80/: incomplete-eof-marker-1.bbc  incomplete-eof-marker-2.bbc  premature-eof-1.bbc  premature-eof-2.bbc  premature-eof-3.bbc  shortline.bbc
basic/tests/: invalid_input_test.sh  io_failure_test.sh  test_tokens.c  usage_error_test.sh
dfs/: .gitignore  CMakeLists.txt  COPYING  Makefile  REFERENCES.md  abstractio.h  afsp.cc  afsp.h  cleanup.h  cmd_cat.cc  cmd_dump.cc  cmd_extract.cc  cmd_extract_files.cc  cmd_extract_unused.cc  cmd_free.cc  cmd_help.cc  cmd_info.cc  cmd_list.cc  cmd_sector_map.cc  cmd_show_titles.cc  cmd_space.cc  cmd_type.cc  commands.cc  commands.h  crc.cc  crc.h  crc16.cc  dfs.cc  dfs.h  dfs_catalog.cc  dfs_catalog.h  dfs_filesystem.cc  dfs_filesystem.h  dfs_format.h  dfs_unused.cc  dfs_unused.h  dfs_volume.cc  dfs_volume.h  dfscontext.h  dfsimage.cc  (+48 more)
dfs/testdata/: acorn-dfs-40t-single-density-single-sided-empty.ssd  acorn-dfs-sd-80t-empty.ssd  acorn-dfs-ss-80t-manyfiles.ssd  dfs-80t-double-sided.dsd  lines-list.txt  watford-sd-62-with-holes.ssd.sectors
dfs/tests/: test_acorn_40t_info.sh  test_afsp.cc  test_cat.sh  test_decompression.sh  test_dsd_info.sh  test_dump.sh  test_extract_all.sh  test_extract_files.sh  test_extract_unused.sh  test_fileio.cc  test_free.sh  test_fsp.sh  test_geometry.cc  test_help.sh  test_hfe.sh  test_hxcmfm.sh  test_info.sh  test_info_afsp.sh  test_invalid_drive_num.sh  test_list.sh  test_main_usage.sh  test_nodrive.sh  test_nofile.sh  test_prober.cc  test_regularexpression.cc  test_sector_map.sh  test_show_config.sh  test_show_titles.sh  test_space.sh  test_storage_even.sh  test_storage_full.sh  test_stringutil.cc  test_ui_cat.sh  test_watford_62_type.sh
doc/: CMakeLists.txt  THANKS.md  bbcbasic.5  bbcbasic_to_text.1  dfs.1  mmb.5
